# pythonanywhere

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yaml  main.yml  pythonanywhere_scripts.yaml  release-package.yml  release.yml
pythonanywhere_scripts/: local_rsync.py  main.py  s3_sync.py  telegram_bot.py  utils.py
src/: local_rsync.py  s3_sync.py  telegram_bot.py  utils.py
tests/: test_s3_sync.py  test_telegram_bot.py  test_utils.py
