[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "-ra -q"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "pythonanywhere_scripts" 
version = "0.2.0"  
description = "A short description of your project"
authors = ["Jeroen <jeroencvlier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8" 
# List other project dependencies here
awscli = "1.32.23"
colorama = "0.4.4"
pytelegrambotapi = "4.15.2"
python-dotenv = "1.0.0"
ipykernel = "^6.29.2"
pytest = "^8.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ipykernel = "^6.29.2"

[tool.poetry.scripts]
pythonanywhere-sync = "pythonanywhere_scripts.main:main"


